fixed sun rotations

--- a/index.html
+++ b/index.html
@@ -27,19 +27,9 @@
     </div>
     <div id="overlay">
       <div id="instructions">
-        <h1>MINECRAFTjs</h1>
+        <h1>MINECRAFT</h1>
         <h2>PRESS ANY KEY TO START</h2>
-        <br><br>
-        CONTROLS<br>
-        ------------------<br>
-        WASD - Move<br>
-        SPACE - Jump<br>
-        R - Reset Camera<br>
-        U - Toggle UI
-        0 - Pickaxe<br>
-        1-8 - Select Block<br>
-        F1 - Save Game<br>
-        F2 - Load Game<br>
+        <p>WASD</p>
       </div>
     </div>
     <div id="status"></div>
